fixed Synonyms overflow

--- a/src/scss/_nouns.scss
+++ b/src/scss/_nouns.scss
@@ -39,11 +39,14 @@ li {
 .synonyms {
   margin-top: 6rem;
   display: flex;
+  flex-wrap: wrap;
+  overflow: hidden;
 
   align-items: center;
 }
 
 .synonymsWords {
+  margin-top: 0.5rem;
   margin-left: 1rem;
   padding-left: 2rem;
   font-size: 1.7rem;
