--- a/src/scss/_searchBar.scss
+++ b/src/scss/_searchBar.scss
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.09);
   outline: 0;
   border: none;
+  font-family: inherit;
   border-radius: 0.4rem;
   padding-left: 1rem;
   padding-right: 2.4rem;
